crates/hearthd/src/snapshots/doctest_examples_rs__default_location_validation.snap
---
source: crates/hearthd/src/examples.rs
expression: error_str
---
[31mError[0m: Validation error in 'locations.default'
  ┌─ <unknown>:1:1
  │
  = default location 'nonexistent' not found in locations
