crates/hearthd/src/snapshots/doctest_examples_rs__field_conflict_same_value.snap
---
source: crates/hearthd/src/examples.rs
expression: error_str
---
[31mError:[0m Merge conflict in field 'locations.home.longitude'
   [38;5;246m╭[0m[38;5;246m─[0m[38;5;246m[[0m config1.toml:4:1 [38;5;246m][0m
   [38;5;246m│[0m
 [38;5;246m4 │[0m [31ml[0m[31mo[0m[31mn[0m[31mg[0m[31mi[0m[31mt[0m[31mu[0m[31md[0m[31me[0m[31m [0m[31m=[0m[31m [0m[31m1[0m[31m0[0m[31m.[0m[31m7[0m[31m5[0m[31m2[0m[31m2[0m
 [38;5;240m  │[0m [31m─[0m[31m─[0m[31m─[0m[31m─[0m[31m─[0m[31m─[0m[31m─[0m[31m─[0m[31m─[0m[31m┬[0m[31m─[0m[31m─[0m[31m─[0m[31m─[0m[31m─[0m[31m─[0m[31m─[0m[31m─[0m[31m─[0m  
 [38;5;240m  │[0m          [31m╰[0m[31m─[0m[31m─[0m[31m─[0m[31m─[0m[31m─[0m[31m─[0m[31m─[0m[31m─[0m[31m─[0m[31m─[0m[31m─[0m first definition here
 [38;5;240m  │[0m 
 [38;5;240m  │[0m [38;5;115mNote[0m: Field 'longitude' for location 'home' defined in multiple config files
[38;5;246m───╯[0m
[31mError:[0m Merge conflict in field 'locations.home.longitude'
   [38;5;246m╭[0m[38;5;246m─[0m[38;5;246m[[0m config2.toml:3:1 [38;5;246m][0m
   [38;5;246m│[0m
 [38;5;246m3 │[0m [33ml[0m[33mo[0m[33mn[0m[33mg[0m[33mi[0m[33mt[0m[33mu[0m[33md[0m[33me[0m[33m [0m[33m=[0m[33m [0m[33m1[0m[33m0[0m[33m.[0m[33m7[0m[33m5[0m[33m2[0m[33m2[0m
 [38;5;240m  │[0m [33m─[0m[33m─[0m[33m─[0m[33m─[0m[33m─[0m[33m─[0m[33m─[0m[33m─[0m[33m─[0m[33m┬[0m[33m─[0m[33m─[0m[33m─[0m[33m─[0m[33m─[0m[33m─[0m[33m─[0m[33m─[0m[33m─[0m  
 [38;5;240m  │[0m          [33m╰[0m[33m─[0m[33m─[0m[33m─[0m[33m─[0m[33m─[0m[33m─[0m[33m─[0m[33m─[0m[33m─[0m[33m─[0m[33m─[0m conflicts with this definition
 [38;5;240m  │[0m 
 [38;5;240m  │[0m [38;5;115mNote[0m: Field 'longitude' for location 'home' defined in multiple config files
[38;5;246m───╯[0m
