crates/hearthd/src/snapshots/doctest_examples_rs__import_conflict.snap
---
source: crates/hearthd/src/examples.rs
assertion_line: 43
expression: error_str
---
[31mError:[0m Merge conflict in field 'logging.level'
   [38;5;246m╭[0m[38;5;246m─[0m[38;5;246m[[0m imported.toml:3:9 [38;5;246m][0m
   [38;5;246m│[0m
 [38;5;246m3 │[0m [38;5;249ml[0m[38;5;249me[0m[38;5;249mv[0m[38;5;249me[0m[38;5;249ml[0m[38;5;249m [0m[38;5;249m=[0m[38;5;249m [0m[31m"[0m[31md[0m[31me[0m[31mb[0m[31mu[0m[31mg[0m[31m"[0m
 [38;5;240m  │[0m         [31m─[0m[31m─[0m[31m─[0m[31m┬[0m[31m─[0m[31m─[0m[31m─[0m  
 [38;5;240m  │[0m            [31m╰[0m[31m─[0m[31m─[0m[31m─[0m[31m─[0m[31m─[0m first definition here
 [38;5;240m  │[0m 
 [38;5;240m  │[0m [38;5;115mNote[0m: Field 'logging.level' defined in multiple config files
[38;5;246m───╯[0m
[31mError:[0m Merge conflict in field 'logging.level'
   [38;5;246m╭[0m[38;5;246m─[0m[38;5;246m[[0m main.toml:5:9 [38;5;246m][0m
   [38;5;246m│[0m
 [38;5;246m5 │[0m [38;5;249ml[0m[38;5;249me[0m[38;5;249mv[0m[38;5;249me[0m[38;5;249ml[0m[38;5;249m [0m[38;5;249m=[0m[38;5;249m [0m[33m"[0m[33mi[0m[33mn[0m[33mf[0m[33mo[0m[33m"[0m
 [38;5;240m  │[0m         [33m─[0m[33m─[0m[33m─[0m[33m┬[0m[33m─[0m[33m─[0m  
 [38;5;240m  │[0m            [33m╰[0m[33m─[0m[33m─[0m[33m─[0m[33m─[0m conflicts with this definition
 [38;5;240m  │[0m 
 [38;5;240m  │[0m [38;5;115mNote[0m: Field 'logging.level' defined in multiple config files
[38;5;246m───╯[0m
