crates/hearthd/src/snapshots/doctest_examples_rs__location_field_conflict.snap
---
source: crates/hearthd/src/examples.rs
assertion_line: 41
expression: error_str
---
[31mError:[0m Merge conflict in field 'locations.locations.home.latitude'
   [38;5;246m╭[0m[38;5;246m─[0m[38;5;246m[[0m :1:1 [38;5;246m][0m
   [38;5;246m│[0m
 [38;5;246m1 │[0m 
 [38;5;240m  │[0m [31m│[0m 
 [38;5;240m  │[0m [31m╰[0m[31m─[0m first definition here
 [38;5;240m  │[0m 
 [38;5;240m  │[0m [38;5;115mNote[0m: Field 'locations.locations.home.latitude' defined in multiple config files
[38;5;246m───╯[0m
[31mError:[0m Merge conflict in field 'locations.locations.home.latitude'
   [38;5;246m╭[0m[38;5;246m─[0m[38;5;246m[[0m config2.toml:1:1 [38;5;246m][0m
   [38;5;246m│[0m
 [38;5;246m1 │[0m 
 [38;5;240m  │[0m [33m│[0m 
 [38;5;240m  │[0m [33m╰[0m[33m─[0m conflicts with this definition
 [38;5;240m  │[0m 
 [38;5;240m  │[0m [38;5;115mNote[0m: Field 'locations.locations.home.latitude' defined in multiple config files
[38;5;246m───╯[0m
