crates/hearthd/src/snapshots/doctest_examples_rs__merge_conflict.snap
---
source: crates/hearthd/src/examples.rs
expression: error_str
---
[31mError:[0m Merge conflict in field 'logging.level'
   [38;5;246m╭[0m[38;5;246m─[0m[38;5;246m[[0m base.toml:3:9 [38;5;246m][0m
   [38;5;246m│[0m
 [38;5;246m3 │[0m [38;5;249ml[0m[38;5;249me[0m[38;5;249mv[0m[38;5;249me[0m[38;5;249ml[0m[38;5;249m [0m[38;5;249m=[0m[38;5;249m [0m[31m"[0m[31mi[0m[31mn[0m[31mf[0m[31mo[0m[31m"[0m
 [38;5;240m  │[0m         [31m─[0m[31m─[0m[31m─[0m[31m┬[0m[31m─[0m[31m─[0m  
 [38;5;240m  │[0m            [31m╰[0m[31m─[0m[31m─[0m[31m─[0m[31m─[0m first definition here
 [38;5;240m  │[0m 
 [38;5;240m  │[0m [38;5;115mNote[0m: Logging level defined in multiple config files
[38;5;246m───╯[0m
[31mError:[0m Merge conflict in field 'logging.level'
   [38;5;246m╭[0m[38;5;246m─[0m[38;5;246m[[0m override.toml:3:9 [38;5;246m][0m
   [38;5;246m│[0m
 [38;5;246m3 │[0m [38;5;249ml[0m[38;5;249me[0m[38;5;249mv[0m[38;5;249me[0m[38;5;249ml[0m[38;5;249m [0m[38;5;249m=[0m[38;5;249m [0m[33m"[0m[33md[0m[33me[0m[33mb[0m[33mu[0m[33mg[0m[33m"[0m
 [38;5;240m  │[0m         [33m─[0m[33m─[0m[33m─[0m[33m┬[0m[33m─[0m[33m─[0m[33m─[0m  
 [38;5;240m  │[0m            [33m╰[0m[33m─[0m[33m─[0m[33m─[0m[33m─[0m[33m─[0m conflicts with this definition
 [38;5;240m  │[0m 
 [38;5;240m  │[0m [38;5;115mNote[0m: Logging level defined in multiple config files
[38;5;246m───╯[0m
