crates/hearthd/src/snapshots/doctest_examples_rs__multiple_conflicts.snap
---
source: crates/hearthd/src/examples.rs
expression: error_str
---
[31mError:[0m Merge conflict in field 'logging.level'
   [38;5;246m╭[0m[38;5;246m─[0m[38;5;246m[[0m config1.toml:3:9 [38;5;246m][0m
   [38;5;246m│[0m
 [38;5;246m3 │[0m [38;5;249ml[0m[38;5;249me[0m[38;5;249mv[0m[38;5;249me[0m[38;5;249ml[0m[38;5;249m [0m[38;5;249m=[0m[38;5;249m [0m[31m"[0m[31mi[0m[31mn[0m[31mf[0m[31mo[0m[31m"[0m
 [38;5;240m  │[0m         [31m─[0m[31m─[0m[31m─[0m[31m┬[0m[31m─[0m[31m─[0m  
 [38;5;240m  │[0m            [31m╰[0m[31m─[0m[31m─[0m[31m─[0m[31m─[0m first definition here
 [38;5;240m  │[0m 
 [38;5;240m  │[0m [38;5;115mNote[0m: Logging level defined in multiple config files
[38;5;246m───╯[0m
[31mError:[0m Merge conflict in field 'logging.level'
   [38;5;246m╭[0m[38;5;246m─[0m[38;5;246m[[0m config2.toml:3:9 [38;5;246m][0m
   [38;5;246m│[0m
 [38;5;246m3 │[0m [38;5;249ml[0m[38;5;249me[0m[38;5;249mv[0m[38;5;249me[0m[38;5;249ml[0m[38;5;249m [0m[38;5;249m=[0m[38;5;249m [0m[33m"[0m[33md[0m[33me[0m[33mb[0m[33mu[0m[33mg[0m[33m"[0m
 [38;5;240m  │[0m         [33m─[0m[33m─[0m[33m─[0m[33m┬[0m[33m─[0m[33m─[0m[33m─[0m  
 [38;5;240m  │[0m            [33m╰[0m[33m─[0m[33m─[0m[33m─[0m[33m─[0m[33m─[0m conflicts with this definition
 [38;5;240m  │[0m 
 [38;5;240m  │[0m [38;5;115mNote[0m: Logging level defined in multiple config files
[38;5;246m───╯[0m
[31mError:[0m Merge conflict in field 'locations.default'
   [38;5;246m╭[0m[38;5;246m─[0m[38;5;246m[[0m config1.toml:6:11 [38;5;246m][0m
   [38;5;246m│[0m
 [38;5;246m6 │[0m [38;5;249md[0m[38;5;249me[0m[38;5;249mf[0m[38;5;249ma[0m[38;5;249mu[0m[38;5;249ml[0m[38;5;249mt[0m[38;5;249m [0m[38;5;249m=[0m[38;5;249m [0m[31m"[0m[31mh[0m[31mo[0m[31mm[0m[31me[0m[31m"[0m
 [38;5;240m  │[0m           [31m─[0m[31m─[0m[31m─[0m[31m┬[0m[31m─[0m[31m─[0m  
 [38;5;240m  │[0m              [31m╰[0m[31m─[0m[31m─[0m[31m─[0m[31m─[0m first definition here
 [38;5;240m  │[0m 
 [38;5;240m  │[0m [38;5;115mNote[0m: Default location defined in multiple config files
[38;5;246m───╯[0m
[31mError:[0m Merge conflict in field 'locations.default'
   [38;5;246m╭[0m[38;5;246m─[0m[38;5;246m[[0m config2.toml:6:11 [38;5;246m][0m
   [38;5;246m│[0m
 [38;5;246m6 │[0m [38;5;249md[0m[38;5;249me[0m[38;5;249mf[0m[38;5;249ma[0m[38;5;249mu[0m[38;5;249ml[0m[38;5;249mt[0m[38;5;249m [0m[38;5;249m=[0m[38;5;249m [0m[33m"[0m[33mw[0m[33mo[0m[33mr[0m[33mk[0m[33m"[0m
 [38;5;240m  │[0m           [33m─[0m[33m─[0m[33m─[0m[33m┬[0m[33m─[0m[33m─[0m  
 [38;5;240m  │[0m              [33m╰[0m[33m─[0m[33m─[0m[33m─[0m[33m─[0m conflicts with this definition
 [38;5;240m  │[0m 
 [38;5;240m  │[0m [38;5;115mNote[0m: Default location defined in multiple config files
[38;5;246m───╯[0m
[31mError[0m: Validation error in 'locations.default'
  ┌─ <unknown>:1:1
  │
  = default location 'home' not found in locations
