crates/hearthd/src/snapshots/doctest_examples_rs__validation_error_missing_longitude.snap
---
source: crates/hearthd/src/examples.rs
expression: error_str
---
[31mError[0m: Validation error in 'locations.home.longitude'
  ┌─ <unknown>:1:1
  │
  = longitude is required
